--- a/source/css/sass/variables/_colours.scss
+++ b/source/css/sass/variables/_colours.scss
@@ -3,4 +3,5 @@ $color-blue2: #03226B;
 $color-blue3: #062D86;
 $color-blue4: #0937A2;
 $color-blue5: #144AC6;
+$color-pale-blue: #c4d6ff;
 $color-white: #fff;
