--- a/source/js/app/directives/header/templates/navMenu.html
+++ b/source/js/app/directives/header/templates/navMenu.html
@@ -1,3 +1,3 @@
 <ul class="nav navbar-nav navbar-right">
-  <li ng-repeat="item in menuItems"><a href="#">{{item.name}}</a></li>
+  <li ng-repeat="item in menuItems"><a ui-sref="{{item.sref}}">{{item.name}}</a></li>
 </ul>
