--- a/assets/css/app.bundle.css
+++ b/assets/css/app.bundle.css
@@ -23,10 +23,11 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: #fff;
-  opacity: 0.95; }
+  opacity: 0.95;
+  z-index: 1000; }
 
 .ma-search .ma-search-close-button-wrapper {
   text-align: center; }
@@ -61,6 +62,38 @@
   border-bottom: 1px solid #144AC6; }
   .search-results-list-item:nth-child(odd) {
     background: #fff; }
+
+.details__hero {
+  height: 460px;
+  background: #c4d6ff;
+  position: relative; }
+
+.details__poster-img {
+  float: left; }
+  .details__poster-img img {
+    max-height: 400px; }
+
+.details__title {
+  float: right;
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  padding: 0 10px;
+  word-break: break-word;
+  max-width: 450px; }
+  @media only screen and (max-width: 991px) {
+    .details__title {
+      max-width: 290px; } }
+  .details__title h1 {
+    margin-top: 10px; }
+
+.details-hero__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 30px;
+  background: rgba(3, 34, 107, 0.6); }
 
 .ma-navbar {
   background: #02184B;
