--- a/source/css/sass/component/_search.scss
+++ b/source/css/sass/component/_search.scss
@@ -3,10 +3,11 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background: $color-white;
     opacity: 0.95;
+    z-index: 1000;
   }
 
   .ma-search-close-button-wrapper {
