--- a/assets/css/app.bundle.css
+++ b/assets/css/app.bundle.css
@@ -73,17 +73,18 @@
   .details__poster-img img {
     max-height: 400px; }
 
-.details__title {
-  float: right;
+.details__more-info {
   background: rgba(0, 0, 0, 0.7);
   color: #fff;
-  padding: 0 10px;
+  padding: 10px;
   word-break: break-word;
-  max-width: 450px; }
+  max-width: 450px;
+  min-width: 310px;
+  margin-bottom: 10px; }
   @media only screen and (max-width: 991px) {
-    .details__title {
+    .details__more-info {
       max-width: 290px; } }
-  .details__title h1 {
+  .details__more-info h1 {
     margin-top: 10px; }
 
 .details-hero__overlay {
@@ -94,6 +95,19 @@
   height: 100%;
   padding: 30px;
   background: rgba(3, 34, 107, 0.6); }
+
+.details .summary-list__term {
+  text-align: left;
+  margin-bottom: 5px; }
+
+.details .summary-list__desc {
+  margin-left: auto;
+  margin-bottom: 5px; }
+
+@media only screen and (max-width: 767px) {
+  .details .summary-list__row {
+    border-bottom: 1px solid #c4d6ff;
+    margin-bottom: 5px; } }
 
 .ma-navbar {
   background: #02184B;
