--- a/source/css/sass/component/_details.scss
+++ b/source/css/sass/component/_details.scss
@@ -1,37 +1,59 @@
-.details__hero {
-  height: 460px;
-  background: $color-pale-blue;
-  position: relative;
-}
+.details{
 
-.details__poster-img {
-  float: left;
-  img {
-    max-height: 400px;
+  &__hero {
+    height: 460px;
+    background: $color-pale-blue;
+    position: relative;
   }
-}
 
-.details__title {
-  float: right;
-  background: rgba(0, 0, 0, 0.7);
-  color: $color-white;
-  padding: 0 10px;
-  word-break: break-word;
-  max-width: 450px;
-  @include breakpoint-max($breakpoint-sm-max) {
-    max-width: 290px;
+  &__poster-img {
+    float: left;
+    img {
+      max-height: 400px;
+    }
   }
-  h1 {
-    margin-top: 10px;
-  }
-}
 
-.details-hero__overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 30px;
-  background: rgba(3, 34, 107, 0.6);
+  &__more-info {
+    background: rgba(0, 0, 0, 0.7);
+    color: $color-white;
+    padding: 10px;
+    word-break: break-word;
+    max-width: 450px;
+    min-width: 310px;
+    margin-bottom: 10px;
+    @include breakpoint-max($breakpoint-sm-max) {
+      max-width: 290px;
+    }
+    h1 {
+      margin-top: 10px;
+    }
+  }
+
+  &-hero__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 30px;
+    background: rgba(3, 34, 107, 0.6);
+  }
+
+  .summary-list__term {
+    text-align: left;
+    margin-bottom: 5px;
+  }
+
+  .summary-list__desc {
+    margin-left: auto;
+    margin-bottom: 5px;
+  }
+
+  .summary-list__row {
+    @include breakpoint-max($breakpoint-xs-max) {
+      border-bottom: 1px solid $color-pale-blue;
+      margin-bottom: 5px;
+    }
+  }
+
 }
