--- a/assets/css/app.bundle.css
+++ b/assets/css/app.bundle.css
@@ -146,6 +146,39 @@
     border-bottom: 1px solid #c4d6ff;
     margin-bottom: 5px; } }
 
+.person-movies {
+  width: 33%; }
+  .person-movies__list {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    max-height: 300px; }
+  .person-movies__item {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px; }
+    .person-movies__item:nth-child(odd) {
+      background: #c4d6ff; }
+  .person-movies__img-wrapper {
+    flex: 4; }
+  .person-movies__placeholder {
+    width: 92px;
+    height: 138px;
+    background: #ccc; }
+  .person-movies__details {
+    display: flex;
+    flex: 8;
+    flex-direction: column; }
+  .person-movies__title {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    font-size: 18px; }
+  .person-movies__character {
+    flex: 1;
+    color: #444;
+    font-style: italic; }
+
 .ma-navbar {
   background: #02184B;
   border-color: #02184B;
