--- a/source/js/app/directives/content/templates/details.html
+++ b/source/js/app/directives/content/templates/details.html
@@ -18,9 +18,19 @@
           <div class="details__more-info">
             <h1>{{title}}</h1>
           </div>
-          <div class="details__more-info">
-            <div ng-if="details.type == 'movie'">
+          <div class="details__more-info" ng-if="details.type == 'movie'">
+            <div>
               <h3 class="info__tagline" ng-if="details.tagline">"{{details.tagline}}"</h3>
+              <dl class="details__summary-list dl-horizontal">
+                <div ng-repeat="item in summaryListItems" class="summary-list__row" ng-class="item.name">
+                  <dt class="summary-list__term">{{item.label}}</dt>
+                  <dd class="summary-list__desc">{{item.value}}</dd>
+                </div>
+              </dl>
+            </div>
+          </div>
+          <div class="details__more-info" ng-if="details.type == 'person'">
+            <div>
               <dl class="details__summary-list dl-horizontal">
                 <div ng-repeat="item in summaryListItems" class="summary-list__row" ng-class="item.name">
                   <dt class="summary-list__term">{{item.label}}</dt>
@@ -54,5 +64,30 @@
       </p>
     </div>
   </div>
+
+  <div ng-if="details.type == 'person'">
+    <div class="person-movies" ng-if="personMovies">
+      <h3>Movies</h3>
+      <div class="person-movies__list">
+        <div class="person-movies__item" ng-repeat="movie in personMovies">
+          <div class="person-movies__img-wrapper">
+            <img ng-src="{{personMoviePoster + movie.poster_path}}" ng-if="movie.poster_path" />
+            <div class="person-movies__placeholder" ng-if="!movie.poster_path">
+            </div>
+          </div>
+          <div class="person-movies__details">
+            <div class="person-movies__title">
+              {{movie.original_title}}
+            </div>
+            <div class="person-movies__character">
+              {{movie.character}}
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 
 </div>
