--- a/assets/css/app.bundle.css
+++ b/assets/css/app.bundle.css
@@ -147,7 +147,9 @@
     margin-bottom: 5px; } }
 
 .person-movies {
-  width: 33%; }
+  width: 33%;
+  float: left;
+  overflow: hidden; }
   .person-movies__list {
     overflow-y: scroll;
     overflow-x: hidden;
