Make 3 units responsive

--- a/assets/css/app.bundle.css
+++ b/assets/css/app.bundle.css
@@ -150,6 +150,10 @@
   width: 33%;
   float: left;
   overflow: hidden; }
+  @media only screen and (max-width: 991px) {
+    .person-movies {
+      width: 100%;
+      float: none; } }
   .person-movies__list {
     overflow-y: scroll;
     overflow-x: hidden;
