--- a/source/css/sass/component/_person-movie-list.scss
+++ b/source/css/sass/component/_person-movie-list.scss
@@ -3,6 +3,11 @@
   float: left;
   overflow: hidden;
 
+  @include breakpoint-max($breakpoint-sm-max) {
+    width: 100%;
+    float: none;
+  }
+
   &__list {
     overflow-y: scroll;
     overflow-x: hidden;
