--- a/assets/css/app.bundle.css
+++ b/assets/css/app.bundle.css
@@ -155,6 +155,7 @@
       width: 100%;
       float: none; } }
   .person-movies__list {
+    -webkit-overflow-scrolling: touch;
     overflow-y: scroll;
     overflow-x: hidden;
     max-height: 300px; }
