--- a/source/css/sass/component/_person-movie-list.scss
+++ b/source/css/sass/component/_person-movie-list.scss
@@ -9,6 +9,7 @@
   }
 
   &__list {
+    -webkit-overflow-scrolling: touch;
     overflow-y: scroll;
     overflow-x: hidden;
     max-height: 300px;
